@@ -231,3 +231,4 @@
 #define ERR_DIRWALK_MISSING_USE "DIRWALK: missing USE statement"
 #define ERR_DIRWALK_CANT_OPEN   "DIRWALK: can't open %s"
 #define ERR_LINE_LENGTH         "Line length limit exceeded at text: '%s'"
+#define ERR_ABNORMAL_EXIT       "Abnormal exit"
