@@ -1,3 +1,7 @@
+2023-08-27 (12.27)
+	COMMON: Fix parameter number error when calling a unit sub/func
+	COMMON: Show a runtime error if a module calls exit()
+
 2023-06-18 (12.27)
 	COMMON: Fix redim regression
 	PLUGINS: Added mechanism for cleaning up resources when the associated map falls out of scope
